Fix antd svg alignment & use svg-react-loader for all teacher svgs
[#165448158]

--- a/resources/styles/_antd-tweaks.less
+++ b/resources/styles/_antd-tweaks.less
@@ -82,6 +82,10 @@
   padding-left: 34px;
 }
 
+.anticon svg {
+  vertical-align: initial;
+}
+
 .ant-input-prefix {
   .anticon {
     color: @shade-5;
